Fix: Fix overflow bug in drawer menu

--- a/frontend/src/components/FilterNSort/FilterNSort.module.css
+++ b/frontend/src/components/FilterNSort/FilterNSort.module.css
@@ -35,6 +35,7 @@
 .sort {
   display: flex;
   flex-wrap: nowrap;
+  margin-left: auto;
 }
 
 .sort select {
@@ -82,4 +83,16 @@
 .checkPill {
   margin-right: auto;
   text-align: start;
+}
+
+@media screen and (max-width: 600px) {
+  .filterNSortBar {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+
+  .filterNSortBar > .sort {
+    margin-left: 0;
+  }
 }
