--- a/frontend/src/components/home/Features/Features.module.css
+++ b/frontend/src/components/home/Features/Features.module.css
@@ -6,6 +6,7 @@
   max-width: var(--max-width);
   padding-block: 4rem;
   padding-inline: 1.25rem;
+  overflow: hidden;
 }
 
 .heading {
